<resources>
    <string name="app_name">Joinme</string>
    <string name="title_interests">Conta pra gente, quais são os seu principais interesses?</string>
    <string name="jump">PULAR</string>
    <string name="next">próximo</string>
    <string name="title_aux">Title</string>
    <string name="title">Titulo</string>

    <string name="in_person">Presencial</string>
    <string name="online">Online</string>

    <string-array name="modalities_array">
        <item>@string/in_person</item>
        <item>@string/online</item>
    </string-array>

    <string name="yes" formatted="true">Sim</string>
    <string name="no" formatted="false">Não</string>
    <string name="title_onboarding_init">A gente entende como alguns dias podem ser bem estressantes...</string>
    <string name="subtitle_onboarding_init">Mas sabia que às vezes é mais produtivo fazer uma pausa e relaxar um pouco?</string>
    <string name="title_onboarding_mid">...já pensou quantas pessoas ao seu redor podem estar se sentindo assim?</string>
    <string name="subtitle_onboarding_mid">Que tal se conectar com elas participando de grupos ou eventos do seu interesse?</string>
    <string name="title_onboarding_end">Um incentivo a mais para você cuidar da sua saúde mental e física!</string>
    <string name="subtitle_onboarding_end">Não seria legal aproveitar melhor o seu tempo livre e ter uma rotina mais agradável?</string>
    <string name="forgot_password_question">Esqueceu a senha?</string>
    <string name="subtitle_forgot_password">Não se preocupe, acontece! Digite seu e-mail abaixo que vamos enviar uma nova senha.</string>
    <string name="your_email">Seu e-email</string>
    <string name="send">enviar</string>
    <string name="remender_password">Lembrou qual era?</string>
    <string name="access_account">Acesse sua conta aqui!</string>
    <string name="send_new_password">Nova senha enviada com sucesso!</string>
    <string name="subtitle_success_password">Verifique seu e-mail e faça login com a nova senha!</string>
    <string name="access_account_button">ACESSAR SUA CONTA</string>
    <string name="send_password">Não recebeu a senha?</string>
    <string name="send_new_password_button">Reenvie aqui!</string>
    <string name="create_new_event">Criar novo evento</string>
    <string name="event_name">Nome do evento</string>
    <string name="cpf_organizer">CPF do organizador</string>
    <string name="event_category">Categoria do evento</string>
    <string name="event_modality">Modalidade</string>
    <string name="accept_pets">Aceita animais de estimação?</string>
    <string name="location_on_google_maps">Adicionar localização no Google Maps</string>
    <string name="accessible_event">Evento acessível a pessoa com deficiência?</string>
    <string name="types_of_disabilities">Clique aqui para entender os tipos de deficiência</string>
    <string name="create_event_and_publish">Criar evento e publicar</string>
    <string name="free_event">Gratuito</string>
    <string name="state">Estado</string>
    <string name="modality_online">Online</string>
    <string name="modality_presencial">Presencial</string>
    <string name="to_participate">Quero participar</string>
    <string name="participation_confirmed">Participação confirmada</string>
    <string name="welcome">Olá, %s</string>
    <string name="pet_friendly_yes">Sim! Aceita! :)</string>
    <string name="pet_friendly_no">Infelizmente,Não!! :/</string>
    <string name="reference_point">Ponto de Referência:</string>
    <string name="event_price">Qual o valor do evento?</string>
    <string name="event_description">Descrição do evento</string>
    <string name="event_date">Data</string>
    <string name="start_time">Horário início</string>
    <string name="end_time">Horário Término</string>
    <string name="maximum_participants">Número máximo de participantes</string>
    <string name="event_url">Url do evento (Online)</string>
    <string name="event_street">Rua/Avenida</string>
    <string name="event_number">Número</string>
    <string name="event_zip_code">CEP</string>
    <string name="event_city">Cidade</string>
    <string name="motivational_message">“Lembre-se: ninguém tem as respostas para a sua vida além de você”</string>
    <string name="question_mood">Como você está se sentindo hoje?</string>
    <string name="subtitle_perfil">Semana difícil?</string>
    <string name="button_perfil">Temos dicas pra você aqui!</string>
    <string name="title_city">Selecione a sua localização:</string>
    <string name="confirm">Confirmar</string>
    <string name="share_event">Compartilhar</string>
    <string name="report_event">Denunciar</string>
    <string name="forum_event">Fórum</string>
    <string name="event_help">Sua dúvida poderá ser respondida pelo organizador\nou participante já confirmados.</string>
    <string name="event_help_title">Dúvidas? Pergunte no fórum do evento!</string>
    <string name="event_location">Local do evento</string>
    <string name="event_accept_pets">Evento aceita animais de estimação?</string>
    <string name="event_accessible">Evento acessível a pessoas com deficiência?</string>
    <string name="event_duration">Duração:</string>
    <string name="event_time">Horário:</string>
    <string name="event_date_card">Data:</string>
    <string name="view_more">ver todas</string>

    <string-array name="pet_friendly_array">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me_text">Estudante de Engenharia de Produção, gosto de fazer atividades físicas e cursos que estimulam a criatividade.</string>
    <string name="about_me">Sobre mim</string>
    <string name="label_name">Name</string>
    <string name="perfil">Perfil</string>
    <string name="label_interests">Interesses</string>
    <string name="label_disabilities">Possui alguma deficiência?</string>
    <string name="label_moods">Registro dos moods da semana:</string>
    <string name="settings">Configurações</string>
    <string name="label_edit_perfil">Editar perfil</string>
    <string name="label_notification">Notificações</string>
    <string name="label_security">Segurança</string>
    <string name="label_invite_friends">Convidar amigos</string>
    <string name="label_help">Ajuda</string>
    <string name="label_logout">Sair da conta</string>
    <string name="label_none">Nenhuma</string>
    <string name="confirm_terms">Por favor concorde com os Termos e Codições e a Política de Privacidade para continuar</string>
    <string name="label_welcome">Que bom ter você por aqui!</string>
    <string name="label_new_account">Sua conta foi criada com sucesso!</string>
    <string name="entrar">Entrar</string>
    <string name="title_emegency">Você gostaria de adicionar um contato para emergências?</string>
    <string name="subtitle_emergency">O contato serve para o organizador do evento enviar uma mensagem a alguém que você confia, caso você não se sinta bem ou tenha alguma emergência e precise de ajuda. O organizador poderá mandar uma mensagem ou ligar para o número quando ele informar uma emergência durante o evento.</string>
    <string name="add_contact">Adicionar contato</string>
    <string name="accessible_card">Acessível</string>
    <string name="event_accessibilitie">Acesssibilidade</string>
    <string name="events_promoted">Eventos impulsionados</string>
    <string name="events_recomended">Eventos recomendados</string>
    <string name="events_online">Eventos online</string>
    <string name="health_and_wellness_tips">Dicas de saúde e bem estar</string>
    <string name="participantes_event">Participantes:</string>
    <string name="organizer_event">Organizador:</string>
    <string name="category_event">Categoria</string>
    <string name="modality_event">Modalidade</string>
    <string name="save_events">Eventos salvos</string>
    <string name="label_cadastro_disabilities">Deseja informar se possui algum tipo de deficiência? Se sim, qual destas?</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="access_gmail">acessar com o gmail</string>
    <string name="coming_soon">Em breve</string>
    <string name="failed_request">Houve uma falha na comunicação</string>
    <string name="google_diary">sincronizar com google agenda</string>
    <string name="failed_favorite">Ocorreu um erro ao favoritar o evento</string>
</resources>