<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.fragments.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="147dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_logo_joinme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textVIewTitle"
        style="@style/Base.Widget.AppCompat.TextView.App_Body_18_Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/forgot_password_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubTitle"
        style="@style/Base.Widget.AppCompat.TextView.App_Body_14_Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVIewTitle" />

    <com.br.ioasys.tremquevoa.presentation.ui.custom_views.CustomFormInput
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:inputType="textEmailAddress"
        app:custom_title="@string/your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSendEmail"
        style="@style/TextAppearance.AppCompat.Button.StyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendEmail">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Base.Widget.AppCompat.TextView.App_Body_16_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remender_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnRegister"
            style="@style/Base.Widget.AppCompat.TextView.App_Body_16_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_account"
            android:textColor="@color/primary_darker" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>