<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.fragments.InterestsFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary_darker"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textVIewTitleInterests"
        style="@style/Base.Widget.AppCompat.TextView.App_Body_18_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/title_interests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInterests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVIewTitleInterests"
        tools:listitem="@layout/interests_item_adapter" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNext"
        style="@style/TextAppearance.AppCompat.Button.StyleButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewButtonJump"
        style="@style/Base.Widget.AppCompat.TextView.App_Body_16_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/jump"
        android:textColor="@color/neutral_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>